<resources>
    <string name="app_name">Bookshelf</string>
    <string name="title_activity_librerias">Librerias</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="librerias">Librerias</string>
    <string name="libros">Libros</string>
    <string name="primer_super_fragmento">Primer super fragmento</string>
    <string name="segundo_super_fragmento">Segundo super fragmento</string>
    <string name="tercer_super_fragmento">Tercer super fragmento</string>
    <string name="entrar">Entrar</string>
    <string name="favoritos">Favoritos</string>
    <string name="librer_as">Librerías</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="bookshelf">BookShelf</string>
    <string name="todo">TODO</string>
    <string name="fragmento_2">fragmento 2</string>
    <string name="fragmento_1">fragmento 1</string>
    <string name="botonadd">botonAdd</string>
    <string name="button">Button</string>
    <string name="estoserialapaginadesubida">EstoSeriaLaPaginaDeSubida</string>
    <string name="subir_libro">Subir Libro</string>
    <string name="t_tulo_del_libro">Título del libro</string>
    <string name="autor_del_libro">Autor del libro</string>
    <string name="c_digo_isbn">Código ISBN</string>
    <string name="linea_de_fuego">Linea de Fuego</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="arturo_p_rez_reverte">: Arturo Pérez-Reverte</string>
    <string name="_978_52_4585_256_3">: 978-52-4585-256-3</string>
    <string name="imagendellibro">imagendellibro</string>
    <string name="fragmento4">Fragmento4</string>
    <string name="instrucciones">Introduce el titulo de un libro total
        o parcial, texto de undeterminado libro para encontrar
        mas detalles sobre el mismo</string>
    <string name="Buscar...">Buscar...</string>
    <string name="Buscar">Buscar</string>
    <string name="buscar">Buscar</string>
    <string name="a_n_no_tienes_libros_favoritos">Aún no tienes libros favoritos</string>
    <string name="a_n_no_tienes_librerias_creadas">Aún no tienes Librerias creadas</string>
</resources>
