<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#97999A"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imagen_libro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/imagendellibro"
            >

        </ImageView>

        <TextView
            android:id="@+id/tituloLibro"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/imagen_libro"
            android:layout_toRightOf="@+id/imagen_libro"
            android:text="@string/linea_de_fuego"
            android:textStyle="bold"

            ></TextView>

        <TextView
            android:id="@+id/autorlibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloLibro"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imagen_libro"
            android:text="@string/arturo_p_rez_reverte"
            android:layout_toEndOf="@+id/imagen_libro"></TextView>

        <TextView
            android:id="@+id/codigolibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/autorlibro"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imagen_libro"
            android:text="@string/_978_52_4585_256_3"
            android:layout_toEndOf="@+id/imagen_libro"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <ImageButton
            android:id="@+id/añadirFav"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginStart="74dp"
            android:layout_marginLeft="74dp"
            android:layout_toEndOf="@+id/tituloLibro"
            android:layout_toRightOf="@+id/tituloLibro"
            card_view:srcCompat="@drawable/ic_favorite" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>